testsite/css/masterefsaestyle.css
/* ... */
.cd-search input {
    border-radius: 0;
    border: none;
    background: rgba(0, 0, 0, 0.75);
    width: 100%;
    padding: 0 5%;
    -webkit-box-shadow: inset 0 1px 0 #e2e3df, 0 3px 6px rgba(0, 0, 0, 0.05);
    -moz-box-shadow: inset 0 1px 0 #e2e3df, 0 3px 6px rgba(0, 0, 0, 0.05);
    box-shadow: inset 0 1px 0 #e2e3df, 0 3px 6px rgba(0, 0, 0, 0.05);
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
    font-size: 1.5em;
    padding: .6em 2em;
    color: #fff;
}
.cd-search input::-webkit-input-placeholder {
    color: #fff !important;
}
.cd-search input::-moz-placeholder {
    color: #fff !important;
}
.cd-search input:-moz-placeholder {
    color: #fff !important;
}
.cd-search input:-ms-input-placeholder {
    color: #fff !important;
}
.cd-search input:focus {
    outline: none;
}
.cd-search.is-visible {   
    -moz-opacity: 1;
    opacity: 1;
    visibility: visible;
    -webkit-transition: opacity .3s 0s, visibility 0s 0s;
    -moz-transition: opacity .3s 0s, visibility 0s 0s;
    transition: opacity .3s 0s, visibility 0s 0s;
}
/*button effects*/
a.button {
    font-size: 1em;
    background: #666;
    text-decoration: none!important;
    padding: 0.5em;
    color: #fff;
    display: block;
    width: 80%;
    margin: 1em auto;
}
/* Shutter Out Horizontal */
 .hvr-shutter-out-horizontal {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    position: relative;
    background: #4fc74f;
    -webkit-transition-property: color;
    transition-property: color;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
}
.hvr-shutter-out-horizontal:before {
    content:"";
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: #a32300;
    -webkit-transform: scaleX(0);
    transform: scaleX(0);
    -webkit-transform-origin: 50%;
    transform-origin: 50%;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
}
.hvr-shutter-out-horizontal:hover, .hvr-shutter-out-horizontal:focus, .hvr-shutter-out-horizontal:active {
    color: white;
}
.hvr-shutter-out-horizontal:hover:before, .hvr-shutter-out-horizontal:focus:before, .hvr-shutter-out-horizontal:active:before {
    -webkit-transform: scaleX(1);
    transform: scaleX(1);
}
/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*Body Header*/
.ftfe-body-header {
    background: url(../images/FTFE-header-horizontal.png) no-repeat 0px 0px;
    background-size: contain;
    position: relative;
    width:60%;
    height:5vw;
    left:0;
    right:0;
    overflow: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 20px;
}
@media (max-width: 800px) {
.ftfe-body-header {
    background: url(../images/FTFE-header-vertical.png) no-repeat 0px 0px;
    background-size: contain;
    position: relative;
    width:45%;
    height:13vw;
    left:0;
    right:0;
    overflow: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    }
}
@media (max-width: 550px) {
.ftfe-body-header {
    background: url(../images/FTFE-header-vertical.png) no-repeat 0px 0px;
    background-size: contain;
    position: relative;
    width:60%;
    height:17vw;
    left:0;
    right:0;
    overflow: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 14px;
    }
}
.body-header-accent{
    opacity: 1;
    width: 75%;
    position: relative;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    height: 3px;
    background-color: #999;
}
/*
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
<!--****************************************************************************************************-->
*/
/*Body*/
.home {
    position: relative;
    width: 100%;
    display: inline-block;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    padding-left: 50px;
    padding-right: 2%;
    margin-bottom: 2%;
    transition: opacity 500ms;
    visibility: visible;
    opacity: 1;
}
.home:target {
    visibility: visible;
    opacity: 1;
}
.home-grid img{
    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    -o-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
.home-grid:hover img {
    webkit-transform: scale(0.98);
    -ms-transform: scale(0.98);
    -o-transform: scale(0.98);
    transform: scale(0.98);
}
.center-image {
    width: 100%;
    max-width: 600px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
}
.about {
    position: relative;
    display: inline-block;
    width: 100%;
    left: 0;
    right:0;
    margin-left: auto;
    margin-right: auto;
    transition: opacity 500ms;
    visibility: visible;
    opacity: 1;
}
.about:target {
    visibility: visible;
    opacity: 1;
}
/*.about img{
    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    -o-transition: all 300ms ease-in-out;
    transition: all 300ms ease-in-out;
}
/* ... */

